--- a/overview.html
+++ b/overview.html
@@ -4,30 +4,254 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Overview</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
 </head>
 
-<body>
-    <nav class="bg-[#2d58b1] h-[12vh] w-full sticky top-0 flex items-center">
-        <!-- back button -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="44" height="44"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M5 12l14 0" />
-            <path d="M5 12l6 6" />
-            <path d="M5 12l6 -6" />
-        </svg>
-        <!-- logo -->
+<body class="">
+    <!-- Top Navbar -->
+    <nav id="home_nav_top" class="bg-[#2d58b1] rounded-b-xl sticky top-0">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
-        <div class="inline-flex size-full justify-center"><img class="object-center" src="./images/FitQuest Logo.svg"
-                alt="">
+            <!-- Back -->
+            <button
+                class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white hover:text-yellow-100">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="40"
+                    height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff9e1" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M5 12l6 6" />
+                    <path d="M5 12l6 -6" />
+                </svg>
+            </button>
+
+            <!-- Logo -->
+            <a href="#" class="flex items-center justify-center mx-auto">
+                <img src="/images/FitQuest Logo.svg" class="h-8" alt="Logo" />
+                <span class="self-center text-2xl text-white font-semibold whitespace-nowrap">FitQuest</span>
+            </a>
+
+            <!-- Hamburger Menu -->
+            <button data-collapse-toggle="navbar-hamburger" type="button"
+                class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white rounded-lg hover:bg-white hover:text-[#2d58b1] focus:outline-none"
+                aria-controls="navbar-hamburger" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 1h15M1 7h15M1 13h15" />
+                </svg>
+            </button>
+            <div class="hidden w-full" id="navbar-hamburger">
+                <ul class="flex flex-col font-medium mt-4 rounded-lg bg-white">
+                    <li>
+                        <a href="#"
+                            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]"
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">History</a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Settings</a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Support</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <!-- hamburger menu -->
-
-
     </nav>
+
+    <main>
+        <!-- dougnut graph -->
+        <div class="max-w-sm w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+            <div class="flex justify-between mb-3">
+                <div class="flex justify-center items-center">
+                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1">Today's Overview</h5>
+                    <svg data-popover-target="chart-info" data-popover-placement="bottom"
+                        class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white cursor-pointer ms-1"
+                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm0 16a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm1-5.034V12a1 1 0 0 1-2 0v-1.418a1 1 0 0 1 1.038-.999 1.436 1.436 0 0 0 1.488-1.441 1.501 1.501 0 1 0-3-.116.986.986 0 0 1-1.037.961 1 1 0 0 1-.96-1.037A3.5 3.5 0 1 1 11 11.466Z" />
+                    </svg>
+                    <div data-popover id="chart-info" role="tooltip"
+                        class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 w-72 dark:bg-gray-800 dark:border-gray-600 dark:text-gray-400">
+                        <div class="p-3 space-y-2">
+                            <h3 class="font-semibold text-gray-900 dark:text-white">Today's Overview</h3>
+                            <p>hi</p>
+                            <h3 class="font-semibold text-gray-900 dark:text-white">Calculation</h3>
+                            <p>bye</p>
+                            <a href="#"
+                                class="flex items-center font-medium text-blue-600 dark:text-blue-500 dark:hover:text-blue-600 hover:text-blue-700 hover:underline">Read
+                                more <svg class="w-2 h-2 ms-1.5 rtl:rotate-180" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2" d="m1 9 4-4-4-4" />
+                                </svg></a>
+                        </div>
+                        <div data-popper-arrow></div>
+                    </div>
+                </div>
+                <div>
+                    <button type="button" data-tooltip-target="data-tooltip" data-tooltip-placement="bottom"
+                        class="hidden sm:inline-flex items-center justify-center text-gray-500 w-8 h-8 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm"><svg
+                            class="w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 16 18">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M8 1v11m0 0 4-4m-4 4L4 8m11 4v3a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-3" />
+                        </svg><span class="sr-only">Download data</span>
+                    </button>
+                    <div id="data-tooltip" role="tooltip"
+                        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                        Download CSV
+                        <div class="tooltip-arrow" data-popper-arrow></div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="flex" id="devices">
+                    <div class="flex items-center me-4">
+                        <input id="desktop" type="checkbox" value="desktop"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                        <label for="desktop"
+                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">General</label>
+                    </div>
+                    <div class="flex items-center me-4">
+                        <input id="tablet" type="checkbox" value="tablet"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                        <label for="tablet"
+                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Excersize</label>
+                    </div>
+                    <div class="flex items-center me-4">
+                        <input id="mobile" type="checkbox" value="mobile"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                        <label for="mobile"
+                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Calories/Nutrition</label>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Donut Chart -->
+            <div class="py-6" id="donut-chart"></div>
+            <div class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between">
+                <div class="flex justify-between items-center pt-5">
+                    <!-- Button -->
+                    <button id="dropdownDefaultButton" data-dropdown-toggle="lastDaysdropdown"
+                        data-dropdown-placement="bottom"
+                        class="text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white"
+                        type="button">
+                        Last 7 days
+                        <svg class="w-2.5 m-2.5 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 4 4 4-4" />
+                        </svg>
+                    </button>
+                    <div id="lastDaysdropdown"
+                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
+                            aria-labelledby="dropdownDefaultButton">
+                            <li>
+                                <a href="#"
+                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Yesterday</a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Today</a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                    3 days</a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                    7 days</a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                    30 days</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#"
+                        class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500  hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 px-3 py-2">
+                        Generate Report
+                        <svg class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 9 4-4-4-4" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Calories burned -->
+        <div id="expandableCard" class="max-w-sm rounded overflow-hidden shadow-lg">
+            <div class="px-6 py-4 cursor-pointer flex items-center justify-between" id="cardHeader">
+                <p class="flex items-center font-bold text-lg">you have burned 234 calories!</p>
+                <!-- burn icon -->
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-flame" width="44"
+                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M12 12c2 -2.96 0 -7 -1 -8c0 3.038 -1.773 4.741 -3 6c-1.226 1.26 -2 3.24 -2 5a6 6 0 1 0 12 0c0 -1.532 -1.056 -3.94 -2 -5c-1.786 3 -2.791 3 -4 2z" />
+                    </svg>
+                </div>
+                <div id="toggleSymbol" class="text-4xl py-1">+</div>
+            </div>
+            <div class="px-3 hidden" id="cardContent">
+                <div class="">
+                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1 pl-4 pb-2">Exercise
+                    </h5>
+                    <canvas id="myChart" class="size-auto"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <!-- Calories consumed -->
+        <div id="expandableCard" class="max-w-sm rounded overflow-hidden shadow-lg">
+            <div class="px-6 py-4 cursor-pointer flex items-center justify-between" id="cardHeader">
+                <p class="flex items-center font-bold text-lg">you have burned 234 calories!</p>
+                <!-- burn icon -->
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-flame" width="44"
+                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M12 12c2 -2.96 0 -7 -1 -8c0 3.038 -1.773 4.741 -3 6c-1.226 1.26 -2 3.24 -2 5a6 6 0 1 0 12 0c0 -1.532 -1.056 -3.94 -2 -5c-1.786 3 -2.791 3 -4 2z" />
+                    </svg>
+                </div>
+                <div id="toggleSymbol" class="text-4xl py-1">+</div>
+            </div>
+            <div class="px-3 hidden" id="cardContent">
+                <div class="">
+                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1 pl-4 pb-2">Exercise
+                    </h5>
+                    <canvas id="myChart" class="size-auto"></canvas>
+                </div>
+            </div>
+        </div>
+
+
+    </main>
+    <script src="/scripts/doughnutGraph.js"></script>
+    <SCript src="/scripts/halfDoughnutGraph.js"></SCript>
+    <script src="/scripts/expandCard.js"></script>
 </body>
 
 </html>
