--- a/signup.html
+++ b/signup.html
@@ -32,61 +32,44 @@
     <!-- Welcome banner -->
     <!-- User info form -->
     <section>
-        <div id="login-form" class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
+        <div id="signup-form" class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
             <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
-                        <p class="text-center">Welcome to FitQuest</p>
-                        <p class="text-center">Sign into your account</p>
+                        <p class="text-center">Welcome!</p>
+                        <p class="text-center">Sign up for FitQuest</p>
                         <form class="space-y-4 md:space-y-6">
                             <!-- Email box -->
                             <div>
                                 <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your
                                     email</label>
-                                <input type="email" name="email" id="email"
+                                <input type="email" name="email" id="signup-email"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                     placeholder="name@mail.com" required="">
+                            </div>
+
+                            <!-- Name -->
+                            <div>
+                                <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Your
+                                    name</label>
+                                <input type="text" name="name" id="signup-name"
+                                    class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                    placeholder="Last Name  First Name" required="">
                             </div>
 
                             <!-- Password box -->
                             <div>
                                 <label for="password"
                                     class="block mb-2 text-sm font-medium text-gray-900">Password</label>
-                                <input type="password" name="password" id="password" placeholder="••••••••"
+                                <input type="password" name="password" id="signup-password" placeholder="••••••••"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                     required="">
                             </div>
 
-                            <!-- <div class="flex items-center justify-between">
-
-                                //Remember me tick box
-                                <div class="flex items-start">
-                                    <div class="flex items-center h-5">
-                                        <input id="remember" aria-describedby="remember" type="checkbox"
-                                            class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300"
-                                            required="">
-                                    </div>
-                                    <div class="ml-3 text-sm">
-                                        <label for="remember" class="text-gray-500">Remember me</label>
-                                    </div>
-                                </div>
-
-                                //Forgot password//
-                                <a href="#" class="text-sm font-medium text-primary-600 hover:underline ">Forgot
-                                    password?</a>
-
-                            </div> -->
-
                             <!-- Sign in button -->
-                            <button id="submit" type="submit"
+                            <button id="signup" type="submit"
                                 class="w-full text-white bg-[#2d58b1] hover:bg-[#172d58] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5">Sign
-                                in</button>
-
-                            <!-- Create account button -->
-                            <p class="text-sm font-light text-gray-500">
-                                Don’t have an account yet? <a href="signup.html"
-                                    class="font-medium text-primary-600 hover:underline">Sign up</a>
-                            </p>
+                                up</button>
                         </form>
                 </div>
             </div>
@@ -124,7 +107,7 @@
 
     <!-- Link to scripts of your own -->
     <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="scripts/signin.js"></script>
+    <script src="scripts/signup.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 </body>
 
