--- a/breakfast.html
+++ b/breakfast.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="flex flex-col">
+
     <!-- top nav bar -->
     <nav id="general-top-nav" class="bg-[#2d58b1] rounded-b-xl ">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
@@ -62,6 +63,48 @@
             </div>
         </div>
     </nav>
+
+    <main class="flex flex-col mt-5">
+        <h1 class="font-bold text-5xl m-4 mb-6">Breakfast</h1>
+        <!-- search bar for recipes -->
+        <form class="flex items-center w-full max-w-md px-4 mb-4">
+            <label for="simple-search" class="sr-only">Search</label>
+            <div class="relative w-full">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm12 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0V6a3 3 0 0 0-3-3H9m1.5-2-2 2 2 2" />
+                    </svg>
+                </div>
+                <input type="text" id="simple-search"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5"
+                    placeholder="Search for recipes..." required />
+            </div>
+            <button type="submit"
+                class="p-2.5 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                </svg>
+                <span class="sr-only">Search</span>
+            </button>
+        </form>
+        <!-- recipes -->
+        <div class="flex w-full mx-auto border-2 border-gray-300 shadow-md rounded-full mt-2 mb-5 p-4 text-center">
+            <div class="w-3/4">
+                <p class="text-3xl font-bold mb-2">Toast</p>
+                <p class="text-sm text-gray-500">0g Protein | 0g Carb | 0g Fat</p>
+            </div>
+            <div class="flex items-center">
+                <p class="text-gray-800 text-lg font-semibold">1000</p>
+                <img src="/images/kcal_icon.svg" alt="" class="size-20">
+            </div>
+        </div>
+    </main>
+
+
     <!-- Footer Navigation Bar -->
     <footer id="general-bottom-nav" class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
         <div class="flex justify-between items-center px-4 py-2">
