--- a/my_recipes.html
+++ b/my_recipes.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../scripts/general_nav_bottom.js"></script>
 </head>
 
 <body class="flex flex-col">
@@ -66,16 +65,20 @@
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
 
         <!-- avatar -->
-        <div class="relative mt-6 mx-auto overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 size-24 flex items-center justify-center">
-            <svg class="flex size-10 items-center text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"> </path>
+        <div
+            class="relative mt-6 mx-auto overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 size-24 flex items-center justify-center">
+            <svg class="flex size-10 items-center text-gray-400" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd">
+                </path>
             </svg>
         </div>
         <h1 class="text-center p-3 font-sans font-bold text-2xl">Matt's Recipes</h1>
 
         <!-- recipe categories -->
         <!-- Breakfast -->
-        <div class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full mt-2 mb-5 sm:px-6 lg:px-8">
+        <div
+            class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full mt-2 mb-5 sm:px-6 lg:px-8">
             <div class="text-center">
                 <p class="text-2xl font-semibold">Breakfast</p>
                 <!-- Adjust font size and weight for "Breakfast" -->
@@ -168,6 +171,7 @@
             </button>
         </div>
     </footer>
+    <script src="../scripts/general_nav_bottom.js"></script>
 </body>
 
 </html>
