--- a/user_info.html
+++ b/user_info.html
@@ -113,12 +113,16 @@
           </select>
         </form>
       </div>
-      <!-- Buttons -->
-      <div class="mb-6 container flex justify-between px-5">
-        <button id="save" type="submit"
-          class="max-w-fit text-white bg-[#2d58b1] hover:bg-[#172d58] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5">Save</button>
+      <!-- Save and Cancel Buttons -->
+      <div class="flex items-center justify-between">
         <button id="cancel" type="reset"
-          class="max-w-fit text-black bg-gray-300 hover:bg-gray-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-[#2d58b1] font-medium rounded-lg text-sm px-5 py-2.5">cancel</button>
+          class=" max-w-fit bg-transparent hover:bg-blue-500 text-[#2d58b1] text-sm font-semibold hover:text-white py-2 px-4 border border-[#2d58b1] hover:border-transparent rounded">
+          Cancel
+        </button>
+        <button id="save" type="submit"
+          class=" max-w-fit bg-[#2d58b1] text-white text-sm  hover:bg-blue-500 font-bold py-2 px-4 rounded">
+          Save
+        </button>
       </div>
 
   </form>
