--- a/profile.html
+++ b/profile.html
@@ -115,6 +115,11 @@
                 </svg>
             </div>
             <div class="my-6">
+                <label for="age" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                <input type="number" id="name" placeholder="name"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+            </div>
+            <div class="my-6">
                 <label for="age" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
                 <input type="number" id="age" placeholder="age"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -145,7 +150,7 @@
             <div class="flex items-center justify-between">
                 <button id="edit"
                     class=" max-w-fit bg-transparent hover:bg-blue-500 text-[#2d58b1] text-sm font-semibold hover:text-white py-2 px-4 border border-[#2d58b1] hover:border-transparent rounded">
-                    Cancel
+                    Edit
                 </button>
                 <button id="save" type="submit"
                     class=" max-w-fit bg-[#2d58b1] text-white text-sm  hover:bg-blue-500 font-bold py-2 px-4 rounded">
