--- a/exercise/exercise_log.html
+++ b/exercise/exercise_log.html
@@ -98,7 +98,8 @@
       </div>
     </nav>
 
-    <div class="flex flex-col container justify-center items-center mx-auto gap-4" id="log-card-container"></div>
+    <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 md:max-w-[75%]"
+      id="exercise-card-container"></div>
 
     <!-- Bottom Navbar -->
     <nav class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
@@ -161,7 +162,7 @@
     <script src="../scripts/general_nav_bottom.js"></script>
     <script src="../scripts/general_skeleton.js"></script>
     <script src="../scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="../scripts/log_exercise.js"></script>
+    <script src="../scripts/exercise_log.js"></script>
   </body>
 
   </html>
